# kdropedit

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  kdropedit.cpp  kdropedit.h  main.cpp  resources.qrc  settings.cpp  settings.h
translations/: app_en.ts  app_ru.ts
